[project]
name = "plymouth"
version = "0.1.0"
description = "discord bot for the Colony server"
authors = [
    {name = "naidneelttil",email = "naidneelttil@protonmail.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-cord (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
